[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/Solid_black.png" type="Texture" id=1]
[ext_resource path="res://interface/Pause.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.478431 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -54.0
margin_right = 52.0
margin_bottom = -28.0
custom_fonts/font = SubResource( 2 )
text = "Pausado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.494
anchor_top = 0.528
anchor_right = 0.494
anchor_bottom = 0.528
margin_left = -27.8267
margin_top = -21.4872
margin_right = 12.1733
margin_bottom = 46.5128
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 1.0
margin_right = 61.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Continuar"

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 61.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 6 )
text = "Reiniciar"

[node name="Sair" type="Button" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 61.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 8 )
text = "Sair"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_Sair_pressed"]
